修改内存占用过高问题